--- a/src/app/home/reset-password/reset-password.component.scss
+++ b/src/app/home/reset-password/reset-password.component.scss
@@ -20,14 +20,13 @@ $background-color: #ecf0f1;
     border-radius: 8px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 
-    h2 {
-      text-align: center;
-      color: $dark-text;
-      margin-bottom: 20px;
-    }
+      h2 {
+        text-align: center;
+        color: $dark-text;
+        margin-bottom: 20px;
+      }
 
-    .wrapper {
-      position: relative;
+  
 
       .p-float-label {
         position: relative;
@@ -79,6 +78,30 @@ $background-color: #ecf0f1;
         margin-top: 5px;
         display: block;
       }
+      .button-style {
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+  
+        button {
+          width: 100%;
+          padding: 15px;
+          margin-top: 15px;
+          justify-content: center;
+          align-items: center;
+          background-color: $primary-color;
+          color: $light-text;
+          font-size: 1rem;
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
+          transition: background-color 0.3s;
+  
+          &:hover {
+            background-color: $secondary-color;
+          }
+        }
+      }
     }
 
     .flex-row {
@@ -100,26 +123,7 @@ $background-color: #ecf0f1;
       }
     }
 
-    .button-style {
-      text-align: center;
-      margin-top: 20px;
-
-      button {
-        width: 100%;
-        padding: 15px;
-        background-color: $primary-color;
-        color: $light-text;
-        font-size: 1rem;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-
-        &:hover {
-          background-color: $secondary-color;
-        }
-      }
-    }
+    
 
     .register-span {
       margin-top: 10px;
@@ -140,7 +144,7 @@ $background-color: #ecf0f1;
       }
     }
   }
-}
+
 
 @media (max-width: 768px) {
   .container {
