--- a/src/app/pages/components/navbar-list/navbar-list.component.html
+++ b/src/app/pages/components/navbar-list/navbar-list.component.html
@@ -1,39 +1,39 @@
 <nav class="navbar align-items-center justify-content-evenly ">
   <ul class="menu flex flex-row  ">
       <li class="menu-item ">
-        <img src="assets/images/OI_logo.png" height="60" class="mr-2" routerLink="/product" />
+        <img src="assets/images/OI_logo.png" height="60" class="mr-2" [routerLink]="['/pages','product']" />
       </li>
         <li class="menu-item ">
-          <a routerLink="/account">
+          <a [routerLink]="['/pages','account']">
             <i class="pi pi-user"></i> {{'navigationForm.account' | transloco}}
           </a>
         </li>
         <li class="menu-item ">
-          <a routerLink="/orders">
+          <a [routerLink]="['/pages','orders']">
             <i class="pi pi-shopping-cart">
               <span pBadge [severity]="'success'" [value]="orderBadge"></span>
             </i> {{'navigationForm.orders' | transloco}}
           </a>
         </li>
         <li class="menu-item">
-          <a routerLink="/favorites">
+          <a [routerLink]="['/pages','favorites']">
             <i class="pi pi-heart">
               <span pBadge [severity]=" 'danger' "  [value]="favoritesBadge"></span>
             </i> {{'navigationForm.favorites' | transloco}}
           </a>
         </li>
         <li class="menu-item">
-          <a routerLink="/about">
+          <a [routerLink]="['/pages','about']">
             <i class="pi pi-question-circle"></i> {{'navigationForm.about' | transloco}}
           </a>
         </li>
         <li class="menu-item">
-          <a routerLink="/support">
+          <a [routerLink]="['/pages','support']">
             <i class="pi pi-question"></i> {{'navigationForm.help&support' | transloco}}
           </a>
         </li>
         <li class="menu-item">
-          <a routerLink="/manager">
+          <a [routerLink]="['/creoter']">
             <i class="pi pi-cog"></i> {{'navigationForm.manager' | transloco}}
           </a>
         </li>
@@ -41,7 +41,7 @@
           <option *ngFor="let option of stateOptions" [ngValue]="option.value">{{ option.label }}</option>
         </select>
         <li class="menu-item">
-          <a routerLink="/">
+          <a (click)="logout()" >
             <i class="pi pi-sign-out"></i> {{'navigationForm.logout' | transloco}}
           </a>
         </li>
