--- a/src/app/pages/components/favorites/content-favorites/content-favorites.component.html
+++ b/src/app/pages/components/favorites/content-favorites/content-favorites.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="table">
     <p-table [value]="product" >
       <ng-template pTemplate="header" >
@@ -43,5 +43,47 @@
         </tr>
       </ng-template>
     </p-table>
+  </div>
+</div> -->
+
+<div
+  class="surface-section px-4 py-8 md:px-6 lg:px-8 border-1 surface-border border-round"
+>
+  <div class="text-900 font-medium text-4xl mb-4">{{'favoritesForm.populerText' | transloco}}</div>
+  <div class="grid -mt-3 -ml-3 -mr-3">
+    <div class="col-12 md:col-6 lg:col-4" *ngFor="let product of product">
+      <div class="p-2">
+        <div class="shadow-2 surface-card-parent border-round">
+          <div class="relative mb-3">
+            <span
+              class="surface-card text-900 shadow-2 px-3 py-2 absolute"
+              style="border-radius: 1.5rem; left: 1rem; top: 1rem"
+              >{{product.category}}</span
+            >
+            <img
+              [src]="
+                'https://primefaces.org/cdn/primeng/images/demo/product/' +
+                product?.file
+              "
+              [alt]="product?.name"
+              class="w-full"
+            />
+          </div>
+          <div class="flex justify-content-between align-items-start mb-3">
+            <span class="text-900 font-medium text-xl">{{product.name}}</span>
+            <span>
+              <i class="pi pi-star-fill text-yellow-500 mr-1"></i>
+              <span class="font-medium">{{product.rating}}</span>
+            </span>
+          </div>
+          <p class="mt-0 mb-3 text-700 line-height-3">
+            {{product.description}}
+          </p>
+          <span class="text-xl font-medium"> ${{
+            product.priceStacked
+          }}</span>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
