--- a/src/app/pages/components/navbar-list/navbar-list.component.html
+++ b/src/app/pages/components/navbar-list/navbar-list.component.html
@@ -9,6 +9,13 @@
           </a>
         </li>
         <li class="menu-item ">
+          <a [routerLink]="['/pages','shopping-cart']">
+            <i class="pi pi-shopping-cart">
+              <span pBadge [severity]="'success'" [value]="orderBadge"></span>
+            </i> {{'navigationForm.cart' | transloco}}
+          </a>
+        </li>
+        <li class="menu-item ">
           <a [routerLink]="['/pages','orders']">
             <i class="pi pi-shopping-cart">
               <span pBadge [severity]="'success'" [value]="orderBadge"></span>
