--- a/src/app/pages/components/orders/content-table/content-table.component.html
+++ b/src/app/pages/components/orders/content-table/content-table.component.html
@@ -46,7 +46,7 @@
             <i
             class="button pi pi-trash"
             style="color: #3498db;"
-            (click)="removeFromCartOrders(product.id)"
+            (click)="deleteOrders(product.id)"
           ></i>
            </div>
           </td>
